--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "repo": "segmentio/storage",
   "description": "simple storage",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "component-emitter": "^1.2.1",
+    "component-events": "^1.0.10",
+    "yields-store": "^1.0.2",
+    "yields-unserialize": "0.0.1"
+  },
   "devDependencies": {
-    "mocha-phantomjs": "^3.3.2",
+    "browserify": "^13.1.1",
     "mocha": "^1.18.0",
-    "gravy": "^0.1.0",
-    "serve": "^1.4.0",
-    "component": "^0.19.7"
+    "mocha-phantomjs": "^3.3.2",
+    "mochify": "^2.18.1",
+    "phantomjs": "^2.1.7"
   }
 }
